--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timezone",
   "description": "Small, elegant, Olson educated, timezone aware date math and `strftime` date formatting in pure JavaScript with no dependendcies for Node.js and the browser. Timezone uses the Olson/IANA timezone database. Timezone is aware of every clock transition in the Olson database. Timezones supports the full compilment of `strftime` format specifiers defined by GNU `date`. Timezone can perform date math and adjust for daylight savings time. Timezone works in the browser too where it is less than 3K minified and gzipped.",
-  "version": "1.0.23",
+  "version": "1.1.0",
   "author": "Alan Gutierrez <alan@prettyrobots.com>",
   "keywords": [
     "time",
@@ -29,7 +29,8 @@
   "contributors": [
     "Eero Ränik <eeror@eeror.com> (http://www.eeror.com/)",
     "Bruins Zachtgoed <niek@fambruins.nl> (https://github.com/pheew)",
-    "Edward Vielmetti <edward.vielmetti@gmail.com> (http://vielmetti.typepad.com/)"
+    "Edward Vielmetti <edward.vielmetti@gmail.com> (http://vielmetti.typepad.com/)",
+    "Jack Howard (https://jackhowa.com/)"
   ],
   "dependencies": {},
   "devDependencies": {
