--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timezone",
+  "name": "@thrash-industries/timezone",
   "description": "Small, elegant, Olson educated, timezone aware date math and `strftime` date formatting in pure JavaScript with no dependendcies for Node.js and the browser. Timezone uses the Olson/IANA timezone database. Timezone is aware of every clock transition in the Olson database. Timezones supports the full compilment of `strftime` format specifiers defined by GNU `date`. Timezone can perform date math and adjust for daylight savings time. Timezone works in the browser too where it is less than 3K minified and gzipped.",
   "version": "1.1.0",
   "author": "Alan Gutierrez <alan@prettyrobots.com>",
@@ -20,11 +20,13 @@
     "strftime"
   ],
   "homepage": "http://bigeasy.github.io/timezone",
-  "bugs": "https://github.com/bigeasy/timezone/issues",
+  "bugs": {
+    "url": "https://github.com/bigeasy/timezone/issues"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "bigeasy/timezone"
+    "url": "git+https://github.com/bigeasy/timezone.git"
   },
   "contributors": [
     "Eero Ränik <eeror@eeror.com> (http://www.eeror.com/)",
@@ -39,5 +41,6 @@
   },
   "scripts": {
     "test": "NODE_PATH=build util/test"
-  }
+  },
+  "main": "index.js"
 }
