--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timezone",
+  "name": "@wpmedia/timezone",
   "description": "Small, elegant, Olson educated, timezone aware date math and `strftime` date formatting in pure JavaScript with no dependendcies for Node.js and the browser. Timezone uses the Olson/IANA timezone database. Timezone is aware of every clock transition in the Olson database. Timezones supports the full compilment of `strftime` format specifiers defined by GNU `date`. Timezone can perform date math and adjust for daylight savings time. Timezone works in the browser too where it is less than 3K minified and gzipped.",
   "version": "1.0.23",
   "author": "Alan Gutierrez <alan@prettyrobots.com>",
@@ -20,16 +20,17 @@
     "strftime"
   ],
   "homepage": "http://bigeasy.github.io/timezone",
-  "bugs": "https://github.com/bigeasy/timezone/issues",
+  "bugs": "https://github.com/@wpmedia/timezone/issues",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "bigeasy/timezone"
+    "url": "@wpmedia/timezone"
   },
   "contributors": [
     "Eero Ränik <eeror@eeror.com> (http://www.eeror.com/)",
     "Bruins Zachtgoed <niek@fambruins.nl> (https://github.com/pheew)",
-    "Edward Vielmetti <edward.vielmetti@gmail.com> (http://vielmetti.typepad.com/)"
+    "Edward Vielmetti <edward.vielmetti@gmail.com> (http://vielmetti.typepad.com/)",
+    "Jack Howard <jack.howard@washpost.com>"
   ],
   "dependencies": {},
   "devDependencies": {
