ci: Only publish specific folder

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "calendar",
     "strftime"
   ],
+  "files": [
+    "build/timezone"
+  ],
   "homepage": "http://bigeasy.github.io/timezone",
   "bugs": "https://github.com/wpmedia/timezone/issues",
   "license": "MIT",
